--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "a destination application allowing world travelers to interact with a database.",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
     "sequelize": "^6.5.0"
   },
   "scripts": {
