--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "firebase": "^8.2.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "node-fetch": "^2.6.1",
