--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "vbsixstar97vbzxAs!",
+    "password": "",
     "database": "tripper_db",
     "host": "localhost",
     "port": 3306,
@@ -9,7 +9,7 @@
   },
   "production": {
     "username": "root",
-    "password": "vbsixstar97vbzxAs!",
+    "password": "",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
