--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "a destination application allowing world travelers to interact with a database.",
   "main": "server.js",
+  "engines":{
+    "node": "15.4.0",
+    "npm": "7.0.15"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
